--- a/src/app/Shared/navbar/navbar.component.html
+++ b/src/app/Shared/navbar/navbar.component.html
@@ -25,9 +25,21 @@
   <!-- Enlaces a la derecha -->
   <ul class="navbar-nav ms-auto d-flex flex-row align-items-center list-unstyled gap-3">
     <li><a class="nav-link" routerLink="/">Inicio</a></li>
+    <div class="dropdown me-3">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="menuDropdown" data-bs-toggle="dropdown"
+      aria-expanded="false">Creá tu cuenta
+      </button>
+    <ul class="dropdown-menu" aria-labelledby="menuDropdown">
+      <li><a class="dropdown-item" routerLink="/">Creá tu cuenta</a></li>
+    </ul>
+  </div>
     <li><a class="nav-link" routerLink="/productos">Productos</a></li>
     <li><a class="nav-link" routerLink="/contacto">Contacto</a></li>
     <li><a class="nav-link" routerLink="/favoritos">Favoritos</a></li>
+<label for="toggle" id="label_toggle"><i class="fa-solid fa-moon"></i>
+</label>
+<input type="checkbox" id="toggle" (click)="cambiarFondo()">
+
     <li class="carrito-link">
       <a class="nav-link" [routerLink]="['/carrito']">
         <i class="bi bi-cart"></i>
