--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,16 @@ body {
     background-color: #121212;
     color: #ddd;
     margin: 0;
+    transition: all 0.3s ease;
+}
+#toggle{
+    display: none;
+}
+#label_toggle{
+    position: static;
+    cursor: pointer;
+}
+.dark{
+    background-color: black;
+    transition: all 1.5s ease;
 }
