--- a/src/app/Shared/navbar/navbar.component.html
+++ b/src/app/Shared/navbar/navbar.component.html
@@ -30,7 +30,7 @@
       aria-expanded="false">Creá tu cuenta
       </button>
     <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-      <li><a class="dropdown-item" routerLink="/">Creá tu cuenta</a></li>
+      <li><a class="dropdown-item" routerLink="/registrarse">Creá tu cuenta</a></li>
     </ul>
   </div>
     <li><a class="nav-link" routerLink="/productos">Productos</a></li>
